fix gap/spacing on navbar

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -11,7 +11,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: flex-start;
-    gap: 1.5rem;
+    gap: 3rem;
     align-items: center;
 
     @include tablet {
@@ -33,7 +33,6 @@
     color: white;
     font-size: 1.25rem;
     font-weight: bold;
-    margin-right: 50%;
 
     @include tablet {
       margin-right: 0;
